--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,20 @@
-function init(){
-  
-  var input = document.getElementById('entryinput')
-  var pressButton = document.getElementById('entrybutton')
-  var output = document.getElementById('textoutput')
-  
-  function alertFunc() {
-    //sends the alert
-    alert('Indu sree: ' + input.value)
-    //changes h2
-    output.innerHTML = input.value;
-  }
-  
-  pressButton.addEventListener('click', alertFunc);
-
+.center {
+  text-align: center;
 }
-window.addEventListener('load', init);
+#container {
+  width: 400px;
+  margin: 50px auto 0;
+}
+#entryinput {
+  width: 100%;
+}
+#entrybutton {
+  width: 200px;
+  text-align: center;
+  color: #fff;
+  background-color: #c00;
+  padding: 2em 0;
+  margin: 20px auto;
+  font-size: 24px;
+  font-weight: bold;
+}
